spacing and sass structure fixes

--- a/assets/sass/imports/_04-partner-offers.scss
+++ b/assets/sass/imports/_04-partner-offers.scss
@@ -61,6 +61,23 @@
 	}
 }
 
+.m-membership-action {
+	padding: $vertical-space;
+	margin: $vertical-space 0;
+	border: 1px solid $border-color-lighter;
+	h2 {
+		margin-bottom: $vertical-space / 2;
+	}
+	p:last-of-type {
+		margin-bottom: 0;
+	}
+	.a-button {
+		display: inline-block;
+		margin-top: 5px;
+		margin-bottom: 5px;
+	}
+}
+
 // media queries
 @media screen and (min-width: $medium-margins-too-small) {
 	.m-partner-offers {
